[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/ProfileControlScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Classes/SceneManager.gd" type="Script" id=4]

[node name="SceneManager" type="Node"]
script = ExtResource( 4 )

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

[node name="OptionsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="ProfileControl" parent="." instance=ExtResource( 1 )]
visible = false
mouse_filter = 2
